--- a/AppGeolocalizacionHuecos/Views/Shared/_LayoutInterno.cshtml
+++ b/AppGeolocalizacionHuecos/Views/Shared/_LayoutInterno.cshtml
@@ -15,7 +15,7 @@
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
-    <div class="ContLayMain">
+    @*<div class="ContLayMain">
         <header class="HeaderLayout">
             <div class="CenterContentImg">
                 <div class="contLaySecIcon"></div>
@@ -132,7 +132,7 @@
                 </ul>
             </div>
         </div>
-    </div>
+    </div>*@
 
     @Scripts.Render("~/bundles/jquery")
     @RenderSection("scripts", required: false)
