--- a/AppGeolocalizacionHuecos/Views/Shared/_LayoutInterno.cshtml
+++ b/AppGeolocalizacionHuecos/Views/Shared/_LayoutInterno.cshtml
@@ -18,7 +18,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;1,300&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/9c8676b409.js" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="~/Scripts/Modulos/_LayoutInterno.js"
+    <script src="~/Scripts/Modulos/_LayoutInterno.js"</script>
             @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
