--- a/AppGeolocalizacionHuecos/Content/Modulos/SearchGPS.css
+++ b/AppGeolocalizacionHuecos/Content/Modulos/SearchGPS.css
@@ -13,8 +13,8 @@
 }
 
 div.containerConsultMain {
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
     display: grid;
     grid-template-columns: 1fr 35em;
     gap: 3px;
