--- a/AppGeolocalizacionHuecos/Content/Modulos/ReporteGPS.css
+++ b/AppGeolocalizacionHuecos/Content/Modulos/ReporteGPS.css
@@ -1,2 +1,250 @@
-﻿body {
+﻿:root {
+    --ClSilver: #94d5e9eb;
+    --ClSilverG: #504f4fd0;
+    --clWhite: rgb(239, 233, 233);
+    --ClBlack: rgb(24, 22, 22);
+    --ClGreenMin: rgb(146, 231, 146);
+}
+
+.ContReportGPSMain {
+    width: 100%;
+    height: 100%;
+    background: rgb(142, 142, 187);
+    display: grid;
+    font-size: 10px;
+    gap: 0.3em;
+    grid-template-columns: 1fr 40em;
+    position: relative;
+}
+
+    .ContReportGPSMain div#ContReportGPSMap {
+        width: 100%;
+        height: 100%;
+        background: #938ddd;
+        position: relative;
+    }
+
+        .ContReportGPSMain div#ContReportGPSMap .ContReportIconGPS1 {
+            width: 5em;
+            height: 5em;
+            position: absolute;
+            right: 4em;
+            bottom: 4em;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background-color: azure;
+            border-radius: 45px;
+            border: 2px solid blue;
+            z-index: 10000;
+            cursor: pointer;
+        }
+
+            .ContReportGPSMain div#ContReportGPSMap .ContReportIconGPS1 i {
+                font-size: 4em;
+                color: black;
+            }
+
+    .ContReportGPSMain div.ContReportGPSForm {
+        width: 100%;
+        height: 100%;
+        background: #d5d7ff;
+        padding: 2em;
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
+        flex-direction: column;
+        gap: 2em;
+    }
+
+        .ContReportGPSMain div.ContReportGPSForm h1 {
+            width: 100%;
+            padding: 0.7em;
+            font-size: 2.5em;
+            text-align: center;
+            text-transform: uppercase;
+            border-bottom: 2px solid silver;
+        }
+
+.fomrElemntInputGPS1 {
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+    flex-direction: column;
+    width: 100%;
+}
+
+.ContReportGPSMain div.ContReportGPSForm .FormReportGPSinfo1 input {
+    width: 100%;
+    padding: .5em;
+    font-size: 1.5em;
+}
+
+.ContReportGPSMain div.ContReportGPSForm .FormReportGPSinfo2 textarea {
+    max-width: 100%;
+    min-width: 100%;
+    max-height: 10em;
+    min-height: 10em;
+    padding: .5em;
+    font-size: 1.5em;
+}
+
+.ContReportGPSMain div.ContReportGPSForm .FormReportGPSinfo3 select {
+    max-width: 100%;
+    min-width: 100%;
+    padding: .5em;
+    font-size: 1.5em;
+    color: black;
+    text-align: center;
+}
+
+.ContReportGPSMain div.ContReportGPSForm .FormReportGPSinfo4 input {
+    max-width: 100%;
+    min-width: 100%;
+    font-size: 1.8em;
+}
+
+.ContReportGPSMain div.ContReportGPSForm label {
+    font-size: 1.6em;
+    color: black;
+}
+
+.DivContGPSReport1 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 2em 0em;
+}
+
+    .DivContGPSReport1 button {
+        width: 10em;
+        height: 2.5em;
+        display: inline-flex;
+        align-items: center;
+        justify-content: center;
+        position: relative;
+        overflow: hidden;
+        font-size: 1.4em;
+        font-weight: 500;
+        border: none;
+        border-radius: 0.5em;
+        cursor: pointer;
+        background: rgb(60, 160, 60);
+        color: white;
+        text-transform: uppercase;
+        transition: .3s ease all;
+    }
+
+.BtnContentReportGPS span {
+    position: relative;
+    z-index: 2;
+    transition: .3s ease all;
+}
+
+.BtnContentReportGPS.ContInfoModalBtn1 span {
+    transition: .4s ease-in-out all;
+}
+
+.BtnContentReportGPS.ContInfoModalBtn1 .icono {
+    display: flex;
+    align-items: center;
+    position: absolute;
+    z-index: 2;
+    left: -20px;
+    transition: .3s ease-in-out all;
+    opacity: 0;
+    font-size: 1.5em;
+}
+
+.BtnContentReportGPS.ContInfoModalBtn1:hover {
+    background: rgb(60, 160, 60);
+}
+
+    .BtnContentReportGPS.ContInfoModalBtn1:hover .icono {
+        left: calc(100% - 1.5em);
+        opacity: 1;
+    }
+
+    .BtnContentReportGPS.ContInfoModalBtn1:hover span {
+        position: absolute;
+        left: 2%;
+    }
+
+
+#ContReportGPSMap .airbutton {
+    width: 5em;
+    height: 5em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    right: 2em;
+    bottom: 2em;
+    z-index: 10000;
+}
+
+    #ContReportGPSMap .airbutton button {
+        width: 5em;
+        height: 5em;
+        font-size: 1em;
+        border-radius: 45px;
+        cursor: pointer;
+        border: 3px inset #0D7AA4;
+        transition: all 0.5s ease-in-out;
+        background: var(--ClSilver);
+    }
+
+        #ContReportGPSMap .airbutton button:hover {
+            border: 3px outset #0D7AA4;
+            background: var(--ClGreenMin);
+        }
+
+        #ContReportGPSMap .airbutton button i {
+            font-size: 3em;
+            color: var(--ClBlack);
+        }
+
+/***************************************** RESPONSIVE *****************************************/
+@media screen and (max-width:1930px) {
+    .ContReportGPSMain {
+        font-size: 11px;
+    }
+}
+
+@media screen and (max-width:1600px) {
+    .ContReportGPSMain {
+        font-size: 10.5px;
+    }
+}
+
+@media screen and (max-width:1440px) {
+    .ContReportGPSMain {
+        font-size: 10px;
+    }
+}
+
+@media screen and (max-width:1366px) {
+    .ContReportGPSMain {
+        font-size: 9.5px;
+    }
+}
+
+@media screen and (max-width:1024px) {
+    .ContReportGPSMain {
+        font-size: 9px;
+    }
+}
+
+@media screen and (max-width:800px) {
+    .ContReportGPSMain {
+        font-size: 8px;
+    }
+}
+
+@media screen and (max-width:650px) {
+    .ContReportGPSMain {
+        font-size: 8px;
+        grid-template-columns: 100%;
+        grid-template-rows: 38em 1fr;
+    }
 }
