--- a/AppGeolocalizacionHuecos/Content/Modulos/SearchGPS.css
+++ b/AppGeolocalizacionHuecos/Content/Modulos/SearchGPS.css
@@ -1,6 +1,6 @@
 ﻿:root {
-    --ClSilver: #d6d5d5d0;
-    --ClSilverG: #504f4fd0;
+    --ClSilver: #a59b9b85;
+    --ClSilverG: #d5d7ff;
     --clWhite: rgb(239, 233, 233);
     --ClBlack: rgb(24, 22, 22);
     --ClGreenMin: rgb(146, 231, 146);
@@ -17,7 +17,7 @@ div.containerConsultMain {
 }
 
     div.containerConsultMain #mapcontainer {
-        background: rgb(101, 96, 165);
+        background: #938ddd;
         position: relative;
         overflow: hidden;
     }
@@ -33,6 +33,7 @@ div.containerConsultMain {
     position: absolute;
     right: 2em;
     bottom: 2em;
+    z-index: 10000;
 }
 
     #mapcontainer .airbutton button {
@@ -89,7 +90,7 @@ div.containerConsultMain {
 
 div.containerConsultMain #reportcontainer {
     max-height: 100%;
-    background: rgb(230, 90, 90);
+    background: var(--ClSilverG);
     display: flex;
     flex-direction: column;
     gap: 0.3em;
@@ -102,24 +103,42 @@ div.containerConsultMain #reportcontainer {
     width: 100%;
     min-height: 9em;
     box-shadow: 0px 44px 56px -43px rgba(30, 0, 199, 1);
-    background: aqua;
+    background: var(--ClSilver);
     padding: 1em;
     display: grid;
     grid-template-columns: 1fr 7em;
+    cursor: pointer;
 }
 
 .reportimage {
-    background: red;
+    height: 7em;
+    width: 7em;
 }
 
 .reporttext {
-    background: rgb(72, 189, 224);
+    background: #c9cbd4;
+    display: grid;
+    grid-template-rows: repeat(4,1fr);
+    gap: 2px;
 }
-
-
+div.reporttext div.TxtLabelContentForm1 {
+    display: grid;
+    grid-template-columns: 10em  1fr;
+}
+div.reporttext div.TxtLabelContentForm1 span {
+    font-size: 1.3em;
+}
+div.reporttext div.TxtLabelContentForm1 span:first-child {
+    font-weight: 600;
+}
+div.reportimage img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
 /***************************************** RESPONSIVE *****************************************/
 @media screen and (max-width:1930px) {
-    div.containerConsultMain {
+    div .containerConsultMain {
         font-size: 12px;
     }
 }
@@ -159,5 +178,18 @@ div.containerConsultMain #reportcontainer {
         grid-template-columns: 1fr;
         grid-template-rows: 1fr 30em;
         font-size: 9px;
+    }
+    #mapcontainer .airbutton {
+        width: 90%;
+        grid-template-columns: 4em 1fr;
+        right: 0.5em;
+        bottom: 0.5em;
+    }
+    #mapcontainer .airbutton button {
+        width: 4em;
+        height: 4em;
+    }
+    #mapcontainer .airbutton .airbuttonInt1 input {
+        padding: 0.2em;
     }
 }
