--- a/AppGeolocalizacionHuecos/Views/Home/ReporteGPS.cshtml
+++ b/AppGeolocalizacionHuecos/Views/Home/ReporteGPS.cshtml
@@ -6,3 +6,68 @@
     <script src="~/Scripts/Modulos/ReporteGPS.js"></script>
 }
 <link href="~/Content/Modulos/ReporteGPS.css" rel="stylesheet" />
+
+<div class="ContReportGPSMain">
+    <div id="ContReportGPSMap">
+        <script>
+            var latlng = [4.57966395921659, -74.21545698023142];
+            var mymap = L.map("ContReportGPSMap").setView(latlng, 18);
+            // mymap.on('click', onMapClick);
+            L.tileLayer(
+                "https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw",
+                {
+                    maxZoom: 18,
+                    attribution:
+                        'Map data &copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors, ' +
+                        'Imagery © <a href="https://www.mapbox.com/">Mapbox</a>',
+                    id: "mapbox/streets-v11",
+                    tileSize: 512,
+                    zoomOffset: -1,
+                }
+            ).addTo(mymap);
+
+        </script>
+        <div class="airbutton">
+            <button>
+                <i class="fa-solid fa-location-dot"></i>
+            </button>
+            <div class="airbuttonInt1">
+                <i class="fa-solid fa-magnifyisng-glass"></i>
+            </div>
+        </div>
+    </div>
+    <div class="ContReportGPSForm">
+        <h1>Reporte de hueco</h1>
+        <div class="FormReportGPSinfo1 fomrElemntInputGPS1">
+            <label for="">Ubicación actual</label>
+            <input type="text" name="" id="" disabled>
+        </div>
+        <div class="FormReportGPSinfo2 fomrElemntInputGPS1">
+            <label for="">Descripción del daño</label>
+            <textarea name="myTextarea" placeholder="Descripcion del hueco a reportar" rows="10" maxlength="250"></textarea>
+        </div>
+        <div class="FormReportGPSinfo3 fomrElemntInputGPS1">
+            <label for="">Tipo de hueco</label>
+            <select name="" id="">
+                <option default>Seleccione un tipo</option>
+                <option value="">--option 1--</option>
+                <option value="">--option 2--</option>
+                <option value="">--option 3--</option>
+                <option value="">--option 4--</option>
+            </select>
+        </div>
+        <div class="FormReportGPSinfo4 fomrElemntInputGPS1">
+            <label for="">Foto del problema</label>
+            <input type="file" name="" id="">
+        </div>
+        <div class="DivContGPSReport1">
+            <button class="BtnContentReportGPS ContInfoModalBtn1" onClick="CloseAlertInfo();">
+                <div class="icono">
+                    <i class="fa-solid fa-thumbs-up"></i>
+                </div>
+                <span>Confirmar</span>
+            </button>
+        </div>
+
+    </div>
+</div>
