--- a/AppGeolocalizacionHuecos/Views/Home/SearchGPS.cshtml
+++ b/AppGeolocalizacionHuecos/Views/Home/SearchGPS.cshtml
@@ -11,7 +11,7 @@
         <script>
             var latlng = [4.57966395921659, -74.21545698023142];
             var mymap = L.map("mapcontainer").setView(latlng, 18);
-            mymap.on('click', onMapClick);
+            /*mymap.on('click', onMapClick);*/
             L.tileLayer(
                 "https://api.mapbox.com/styles/v1/{id}/tiles/{z}/{x}/{y}?access_token=pk.eyJ1IjoibWFwYm94IiwiYSI6ImNpejY4NXVycTA2emYycXBndHRqcmZ3N3gifQ.rJcFIG214AriISLbB6B5aw",
                 {
@@ -41,42 +41,48 @@
     <div id="reportcontainer">
         <div class="CardContainerSearch slideInRight">
             <div class="reporttext">
-
+                <div class="TxtLabelContentForm1">
+                    <span>CODIGO</span>
+                    <span>0001</span>
+                </div>
+                <div class="TxtLabelContentForm1">
+                    <span>FECHA R.</span>
+                    <span>18/01/2022</span>
+                </div>
+                <div class="TxtLabelContentForm1">
+                    <span>TIPO HUECO</span>
+                    <span>Alcantarilla destapada</span>
+                </div>
+                <div class="TxtLabelContentForm1">
+                    <span>UBICACION</span>
+                    <span>Cra 145# 142f -59</span>
+                </div>
             </div>
             <div class="reportimage">
-
+                <img src="~/Img/Media/ReporteHuecos/Hueco_000001.JPG" />
             </div>
         </div>
         <div class="CardContainerSearch slideInRight">
             <div class="reporttext">
-
+                <div class="TxtLabelContentForm1">
+                    <span>CODIGO</span>
+                    <span>0002</span>
+                </div>
+                <div class="TxtLabelContentForm1">
+                    <span>FECHA R.</span>
+                    <span>18/01/2022</span>
+                </div>
+                <div class="TxtLabelContentForm1">
+                    <span>TIPO HUECO</span>
+                    <span>Alcantarilla destapada</span>
+                </div>
+                <div class="TxtLabelContentForm1">
+                    <span>UBICACION</span>
+                    <span>Cra 145# 142f -59</span>
+                </div>
             </div>
             <div class="reportimage">
-
-            </div>
-        </div>
-        <div class="CardContainerSearch slideInRight">
-            <div class="reporttext">
-
-            </div>
-            <div class="reportimage">
-
-            </div>
-        </div>
-        <div class="CardContainerSearch slideInRight">
-            <div class="reporttext">
-
-            </div>
-            <div class="reportimage">
-
-            </div>
-        </div>
-        <div class="CardContainerSearch slideInRight">
-            <div class="reporttext">
-
-            </div>
-            <div class="reportimage">
-
+                <img src="~/Img/Media/ReporteHuecos/Hueco_000002.JPG" />
             </div>
         </div>
 
