modificacion de menus

--- a/AppGeolocalizacionHuecos/Views/Shared/_LayoutInterno.cshtml
+++ b/AppGeolocalizacionHuecos/Views/Shared/_LayoutInterno.cshtml
@@ -56,21 +56,17 @@
                             <a href="SearchGPS" class="nav__link">BUSCAR HUECOS</a>
                         </div>
                     </li>
-
-                    <li class="list__item list__item--click">
-                        <div class="list__button list__button--click" data-value="2">
-                            <i class="fa-solid fa-business-time"></i>
-                            <a href="#" class="nav__link">REPORTAR</a>
-                            <i class="fa-solid fa-angle-right list__arrow"></i>
+                    <li class="list__item">
+                        <div class="list__button" data-value="1">
+                            <i class="fa-solid fa-house"></i>
+                            <a href="ReporteGPS" class="nav__link">GENERAR REPORTE</a>
                         </div>
-                        <ul class="list__show">
-                            <li class="list__inside">
-                                <a href="ReporteGPS" class="nav__link nav__link--inside">POR GPS</a>
-                            </li>
-                            <li class="list__inside">
-                                <a href="ReporteFormulario" class="nav__link nav__link--inside">POR FORMULARIO</a>
-                            </li>
-                        </ul>
+                    </li>
+                    <li class="list__item">
+                        <div class="list__button" data-value="1">
+                            <i class="fa-solid fa-house"></i>
+                            <a href="ReporteFormulario" class="nav__link">MIS REPORTES</a>
+                        </div>
                     </li>
 
                     <li class="list__item">
