--- a/AppGeolocalizacionHuecos/Content/Modulos/ReporteGPS.css
+++ b/AppGeolocalizacionHuecos/Content/Modulos/ReporteGPS.css
@@ -17,54 +17,55 @@
     position: relative;
 }
 
-    .ContReportGPSMain div#ContReportGPSMap {
-        width: 100%;
-        height: 100%;
-        background: #938ddd;
-        position: relative;
-    }
+.ContReportGPSMain div#ContReportGPSMap {
+    width: 100%;
+    height: 100%;
+    background: #938ddd;
+    position: relative;
+}
 
-        .ContReportGPSMain div#ContReportGPSMap .ContReportIconGPS1 {
-            width: 5em;
-            height: 5em;
-            position: absolute;
-            right: 4em;
-            bottom: 4em;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background-color: azure;
-            border-radius: 45px;
-            border: 2px solid blue;
-            z-index: 10000;
-            cursor: pointer;
-        }
+.ContReportGPSMain div#ContReportGPSMap .ContReportIconGPS1 {
+    width: 5em;
+    height: 5em;
+    position: absolute;
+    right: 4em;
+    bottom: 4em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: azure;
+    border-radius: 45px;
+    border: 2px solid blue;
+    z-index: 10000;
+    cursor: pointer;
+}
 
-            .ContReportGPSMain div#ContReportGPSMap .ContReportIconGPS1 i {
-                font-size: 4em;
-                color: black;
-            }
+.ContReportGPSMain div#ContReportGPSMap .ContReportIconGPS1 i {
+    font-size: 4em;
+    color: black;
+}
 
-    .ContReportGPSMain div.ContReportGPSForm {
-        width: 100%;
-        height: 100%;
-        background: #d5d7ff;
-        padding: 2em;
-        display: flex;
-        align-items: center;
-        justify-content: flex-start;
-        flex-direction: column;
-        gap: 2em;
-    }
+.ContReportGPSMain div.ContReportGPSForm {
+    width: 100%;
+    height: 100%;
+    background: #d5d7ff;
+    padding: 2em;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    flex-direction: column;
+    overflow-y: auto;
+    gap: 1em;
+}
 
-        .ContReportGPSMain div.ContReportGPSForm h1 {
-            width: 100%;
-            padding: 0.7em;
-            font-size: 2.5em;
-            text-align: center;
-            text-transform: uppercase;
-            border-bottom: 2px solid silver;
-        }
+.ContReportGPSMain div.ContReportGPSForm h1 {
+    width: 100%;
+    padding: 0.7em;
+    font-size: 2.5em;
+    text-align: center;
+    text-transform: uppercase;
+    border-bottom: 2px solid silver;
+}
 
 .fomrElemntInputGPS1 {
     display: flex;
@@ -116,24 +117,24 @@
     margin: 2em 0em;
 }
 
-    .DivContGPSReport1 button {
-        width: 10em;
-        height: 2.5em;
-        display: inline-flex;
-        align-items: center;
-        justify-content: center;
-        position: relative;
-        overflow: hidden;
-        font-size: 1.4em;
-        font-weight: 500;
-        border: none;
-        border-radius: 0.5em;
-        cursor: pointer;
-        background: rgb(60, 160, 60);
-        color: white;
-        text-transform: uppercase;
-        transition: .3s ease all;
-    }
+.DivContGPSReport1 button {
+    width: 10em;
+    height: 2.5em;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    overflow: hidden;
+    font-size: 1.4em;
+    font-weight: 500;
+    border: none;
+    border-radius: 0.5em;
+    cursor: pointer;
+    background: rgb(60, 160, 60);
+    color: white;
+    text-transform: uppercase;
+    transition: .3s ease all;
+}
 
 .BtnContentReportGPS span {
     position: relative;
@@ -160,21 +161,22 @@
     background: rgb(60, 160, 60);
 }
 
-    .BtnContentReportGPS.ContInfoModalBtn1:hover .icono {
-        left: calc(100% - 1.5em);
-        opacity: 1;
-    }
+.BtnContentReportGPS.ContInfoModalBtn1:hover .icono {
+    left: calc(100% - 1.5em);
+    opacity: 1;
+}
 
-    .BtnContentReportGPS.ContInfoModalBtn1:hover span {
-        position: absolute;
-        left: 2%;
-    }
-
+.BtnContentReportGPS.ContInfoModalBtn1:hover span {
+    position: absolute;
+    left: 2%;
+}
 
 #ContReportGPSMap .airbutton {
-    width: 5em;
+    width: 30em;
     height: 5em;
-    display: flex;
+    display: grid;
+    grid-template-columns: 5em 1fr;
+    gap: 5px;
     justify-content: center;
     align-items: center;
     position: absolute;
@@ -183,26 +185,57 @@
     z-index: 10000;
 }
 
-    #ContReportGPSMap .airbutton button {
-        width: 5em;
-        height: 5em;
-        font-size: 1em;
-        border-radius: 45px;
-        cursor: pointer;
-        border: 3px inset #0D7AA4;
-        transition: all 0.5s ease-in-out;
-        background: var(--ClSilver);
-    }
+#ContReportGPSMap .airbutton button {
+    width: 5em;
+    height: 5em;
+    font-size: 1em;
+    border-radius: 45px;
+    cursor: pointer;
+    border: 3px inset #0D7AA4;
+    transition: all 0.5s ease-in-out;
+    background: var(--ClSilver);
+}
 
-        #ContReportGPSMap .airbutton button:hover {
-            border: 3px outset #0D7AA4;
-            background: var(--ClGreenMin);
-        }
+#ContReportGPSMap .airbutton button:hover {
+    border: 3px outset #0D7AA4;
+    background: var(--ClGreenMin);
+}
 
-        #ContReportGPSMap .airbutton button i {
-            font-size: 3em;
-            color: var(--ClBlack);
-        }
+#ContReportGPSMap .airbutton button i {
+    font-size: 3em;
+    color: var(--ClBlack);
+}
+
+#ContReportGPSMap .airbutton .airbuttonInt1 {
+    display: grid;
+    grid-template-columns: 1fr 3em;
+    justify-content: center;
+    align-items: center;
+    border: 2px solid var(--ClSilverG);
+    background: var(--clWhite);
+    border-radius: 0.8em;
+    overflow: hidden;
+}
+
+#ContReportGPSMap .airbutton .airbuttonInt1 input {
+    width: 100%;
+    height: 100%;
+    font-size: 1.7em;
+    padding: 0.4em;
+    background: none;
+    border-style: none;
+    outline: none;
+    color: var(--ClBlack);
+    border: 2px solid transparent;
+    transition: all 0.5s ease-in-out;
+}
+
+#ContReportGPSMap .airbutton .airbuttonInt1 i {
+    font-size: 2em;
+    align-self: right;
+    color: var(--ClSilverG);
+    cursor: pointer;
+}
 
 /***************************************** RESPONSIVE *****************************************/
 @media screen and (max-width:1930px) {
@@ -239,6 +272,12 @@
     .ContReportGPSMain {
         font-size: 8px;
     }
+    #ContReportGPSMap .airbutton {
+        width: 27em;
+    }
+    .ContReportGPSMain div#ContReportGPSMap {
+        font-size: 1em;
+    }
 }
 
 @media screen and (max-width:650px) {
@@ -246,5 +285,8 @@
         font-size: 8px;
         grid-template-columns: 100%;
         grid-template-rows: 38em 1fr;
+    }
+    .ContReportGPSMain div#ContReportGPSMap {
+        font-size: 1em;
     }
 }
