--- a/AppGeolocalizacionHuecos/Views/Home/ReporteGPS.cshtml
+++ b/AppGeolocalizacionHuecos/Views/Home/ReporteGPS.cshtml
@@ -42,12 +42,12 @@
             <textarea name="myTextarea" placeholder="Descripcion del hueco a reportar" rows="10" maxlength="250"></textarea>
         </div>
 
-        <div class="FormReportGPSinfo4 fomrElemntInputGPS1">
-            <label for="">Foto del problema</label>
-            <input type="file" name="" id="">
+        <div class="FormReportGPSinfo4 fomrElemntInputGPS1" id="ContInputFileIMG">
+            <label for="FileImportIMGGPS">Foto del problema</label>
+            <input type="file" id="FileImportIMGGPS" accept="image/*">
         </div>
         <div class="DivContGPSReport1">
-            <button class="BtnContentReportGPS ContInfoModalBtn1" onClick="CloseAlertInfo();">
+            <button class="BtnContentReportGPS ContInfoModalBtn1" onClick="GuardarImagen();">
                 <div class="icono">
                     <i class="fa-solid fa-thumbs-up"></i>
                 </div>
