--- a/AppGeolocalizacionHuecos/Views/Shared/_LayoutInterno.cshtml
+++ b/AppGeolocalizacionHuecos/Views/Shared/_LayoutInterno.cshtml
@@ -49,7 +49,12 @@
         <div class="ContLayContent CenterContent">
             <div class="MenuModaAcceso nav desactivar">
                 <ul class="list">
-
+                    <li class="list__item">
+                        <div class="list__button" data-value="1">
+                            <i class="fa-solid fa-house"></i>
+                            <a href="HomeApp" class="nav__link">HOME</a>
+                        </div>
+                    </li>
                     <li class="list__item">
                         <div class="list__button" data-value="1">
                             <i class="fa-solid fa-house"></i>
