--- a/AppGeolocalizacionHuecos/Views/Home/ReporteGPS.cshtml
+++ b/AppGeolocalizacionHuecos/Views/Home/ReporteGPS.cshtml
@@ -25,11 +25,13 @@
         </div>
         <div class="FormReportGPSinfo1 fomrElemntInputGPS1">
             <label for="">Ubicación registrada</label>
-            <input type="text" name="" id="InputDirSearchGPS2" disabled>
+            <input type="text" name="" id="InputDirSearchGPS2" value="4.5866275404027315 , -74.21113049640729" disabled>
+            <input type="hidden" name="" id="LatDirSearchGPS1" value="4.5866275404027315" disabled>
+            <input type="hidden" name="" id="LngDirSearchGPS2" value="-74.21113049640729" disabled>
         </div>
         <div class="FormReportGPSinfo3 fomrElemntInputGPS1">
             <label for="">Tipo de hueco</label>
-            <select name="" id="">
+            <select name="" id="InputDirSearchGPS3">
                 <option default value="0">Seleccione un tipo</option>
                 <option value="1">Hueco en la calle</option>
                 <option value="2">Alcantarilla sin tapa</option>
@@ -39,7 +41,7 @@
         </div>
         <div class="FormReportGPSinfo2 fomrElemntInputGPS1">
             <label for="">Descripción del daño</label>
-            <textarea name="myTextarea" placeholder="Descripcion del hueco a reportar" rows="10" maxlength="250"></textarea>
+            <textarea name="myTextarea" placeholder="Descripcion del hueco a reportar" rows="10" maxlength="250" id="InputDirSearchGPS4"></textarea>
         </div>
 
         <div class="FormReportGPSinfo4 fomrElemntInputGPS1" id="ContInputFileIMG">
@@ -47,7 +49,7 @@
             <input type="file" id="FileImportIMGGPS" accept="image/*">
         </div>
         <div class="DivContGPSReport1">
-            <button class="BtnContentReportGPS ContInfoModalBtn1" onClick="GuardarImagen();">
+            <button class="BtnContentReportGPS ContInfoModalBtn1" onClick="prueba1();">
                 <div class="icono">
                     <i class="fa-solid fa-thumbs-up"></i>
                 </div>
