modulo de mi registro front

--- a/AppGeolocalizacionHuecos/Views/Home/HomeApp.cshtml
+++ b/AppGeolocalizacionHuecos/Views/Home/HomeApp.cshtml
@@ -28,7 +28,7 @@
     <div class="CardContint1" id="CardHome3">
         <div class="contCardImg" style="background: url(../../Img/BgGPSForm.jpg); background-size: cover; background-position: center;"></div>
         <div class="contCardTxt">
-            <span>Reportar por Formulario</span>
+            <span>Mis Reportes</span>
         </div>
     </div>
     <div class="CardContint1" id="CardHome4">
