--- a/AppGeolocalizacionHuecos/Views/Home/ReporteFormulario.cshtml
+++ b/AppGeolocalizacionHuecos/Views/Home/ReporteFormulario.cshtml
@@ -8,3 +8,82 @@
 }
 
 <link href="~/Content/Modulos/ReporteFormulario.css" rel="stylesheet" />
+
+<div id="ContMisReportesMain">
+    <div class="contReportHeader">
+        <h1>MIS REPORTES GENERADOS</h1>
+    </div>
+    <div class="contReportInfo">
+        <p>
+            Recuerda que ayudas a otros usuarios dando información más precisa y detalla, si encuentras que un reporte ya no es válido o tiene malas interacciones de otras personas (like y dislike), podras inactivarlo el reporte para que no se muestre a otros usuarios.
+        </p>
+    </div>
+    <div class="contReportInfoTable">
+        <div class="contintSpanReport">
+            <span><b>Reportes totales: </b>5</span>
+        </div>
+        <div class="contIntTableReport1">
+            <table class="tblInfoReport">
+                <thead class="ThInfoReport">
+                    <tr class="TbTrReport">
+                        <th>ID</th>
+                        <th>TIPO</th>
+                        <th> <i class="fa-regular fa-thumbs-up"></i> / <i class="fa-sharp fa-solid fa-thumbs-down"></i></th>
+                        <th>ESTADO</th>
+                        <th>DETALLE</th>
+                    </tr>
+                </thead>
+                <tbody class="TbInfoReport">
+                    <tr class="TbTrReport">
+                        <td>-- prueba --</td>
+                        <td>-- prueba --</td>
+                        <td class="interaccionReport1"> <span>0</span> <span>/</span> <span>0</span></td>
+                        <td>
+                            <div class="switch">
+                                <input type="checkbox" id="check1">
+                                <label for="check1" id="labelcheck1"></label>
+                            </div>
+                        </td>
+                        <td>
+                            <div class="contBtnInfoReport65" onclick="AbrirModalInfoReport();">
+                                <i class="fa-solid fa-street-view"></i>
+                            </div>
+                        </td>
+                    </tr>
+                    <tr class="TbTrReport">
+                        <td>-- prueba --</td>
+                        <td>-- prueba --</td>
+                        <td class="interaccionReport1"> <span>0</span> <span>/</span> <span>0</span></td>
+                        <td>
+                            <div class="switch">
+                                <input type="checkbox" id="check1">
+                                <label for="check1" id="labelcheck1"></label>
+                            </div>
+                        </td>
+                        <td>
+                            <div class="contBtnInfoReport65" onclick="AbrirModalInfoReport();">
+                                <i class="fa-solid fa-street-view"></i>
+                            </div>
+                        </td>
+                    </tr>
+                    <tr class="TbTrReport">
+                        <td>-- prueba --</td>
+                        <td>-- prueba --</td>
+                        <td class="interaccionReport1"> <span>0</span> <span>/</span> <span>0</span></td>
+                        <td>
+                            <div class="switch">
+                                <input type="checkbox" id="check1">
+                                <label for="check1" id="labelcheck1"></label>
+                            </div>
+                        </td>
+                        <td>
+                            <div class="contBtnInfoReport65" onclick="AbrirModalInfoReport();">
+                                <i class="fa-solid fa-street-view"></i>
+                            </div>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
