--- a/AppGeolocalizacionHuecos/Views/Home/ReporteGPS.cshtml
+++ b/AppGeolocalizacionHuecos/Views/Home/ReporteGPS.cshtml
@@ -25,9 +25,9 @@
         </div>
         <div class="FormReportGPSinfo1 fomrElemntInputGPS1">
             <label for="">Ubicación registrada</label>
-            <input type="text" name="" id="InputDirSearchGPS2" value="4.5866275404027315 , -74.21113049640729" disabled>
-            <input type="hidden" name="" id="LatDirSearchGPS1" value="4.5866275404027315" disabled>
-            <input type="hidden" name="" id="LngDirSearchGPS2" value="-74.21113049640729" disabled>
+            <input type="text" name="" id="InputDirSearchGPS2" disabled>
+            <input type="hidden" name="" id="LatDirSearchGPS1" disabled>
+            <input type="hidden" name="" id="LngDirSearchGPS2" disabled>
         </div>
         <div class="FormReportGPSinfo3 fomrElemntInputGPS1">
             <label for="">Tipo de hueco</label>
@@ -49,7 +49,7 @@
             <input type="file" id="FileImportIMGGPS" accept="image/*">
         </div>
         <div class="DivContGPSReport1">
-            <button class="BtnContentReportGPS ContInfoModalBtn1" onClick="prueba1();">
+            <button class="BtnContentReportGPS ContInfoModalBtn1" onClick="GenerarRegistro();">
                 <div class="icono">
                     <i class="fa-solid fa-thumbs-up"></i>
                 </div>
