servicio traer reporte

--- a/AppGeolocalizacionHuecos/Views/Home/ReporteFormulario.cshtml
+++ b/AppGeolocalizacionHuecos/Views/Home/ReporteFormulario.cshtml
@@ -40,7 +40,7 @@
                         <td class="interaccionReport1"> <span>0</span> <span>/</span> <span>0</span></td>
                         <td>
                             <div class="switch">
-                                <input type="checkbox" id="check1">
+                                <input type="checkbox" id="check1"  class="InputStatusReport" value="valor1" checked>
                                 <label for="check1" id="labelcheck1"></label>
                             </div>
                         </td>
@@ -56,8 +56,8 @@
                         <td class="interaccionReport1"> <span>0</span> <span>/</span> <span>0</span></td>
                         <td>
                             <div class="switch">
-                                <input type="checkbox" id="check1">
-                                <label for="check1" id="labelcheck1"></label>
+                                <input type="checkbox" id="check2" class="InputStatusReport" value="valor2">
+                                <label for="check2" id="labelcheck2"></label>
                             </div>
                         </td>
                         <td>
@@ -72,8 +72,8 @@
                         <td class="interaccionReport1"> <span>0</span> <span>/</span> <span>0</span></td>
                         <td>
                             <div class="switch">
-                                <input type="checkbox" id="check1">
-                                <label for="check1" id="labelcheck1"></label>
+                                <input type="checkbox" id="check3"  class="InputStatusReport" value="valor3">
+                                <label for="check3" id="labelcheck3"></label>
                             </div>
                         </td>
                         <td>
